Style book frame and align books correctly

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,14 @@ button{
 }
 
 .book-frame{
+    margin: 0 auto;
+    width: min(100%, 60rem);
     padding: clamp(2rem, 5vh, 3rem);
+    display: grid;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, 10rem);
+    gap: clamp(2rem, 5vh, 3rem);
 }
 .book{
     padding: 1rem;
